--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: joshjohanning-org/composite-action@v1.0.0
         with:
-          who-to-greet: 'San Dieeego!'
+          who-to-greet: 'Chicagoooo'
       - run: touch build.txt
       - uses: actions/upload-artifact@v3
         with:
